--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tabler/icons-react": "^3.9.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.17.3",
